tests/reference/run-infer_realloc_disabled_01-25a8068.stderr
runtime error: Array 'x' is not allocated. Allocate it manually or use the '--realloc-lhs-arrays' option to allocate it automatically.
 --> tests/errors/infer_realloc_disabled_01.f90:3:5
  |
3 |     x = [1, 2, 3]
  |     ^ 'x' not allocated here
